<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/constraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblTitle"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_margin"
        android:layout_marginStart="@dimen/activity_main_margin"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:text="@string/activity_main_lblTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_margin"
        android:layout_marginStart="@dimen/activity_main_margin"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:text="@string/activity_main_lblUsername"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle"/>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_margin"
        android:layout_marginStart="@dimen/activity_main_margin"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:hint="@string/activity_main_lblUsername"
        android:inputType="text"
        android:maxLength="@integer/activity_main_txtUsername_maxLength"
        android:maxLines="1"
        android:paddingTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUsername">

        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_margin"
        android:layout_marginStart="@dimen/activity_main_margin"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:text="@string/activity_main_lblPassword"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_margin"
        android:layout_marginStart="@dimen/activity_main_margin"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:hint="@string/activity_main_lblPassword"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="@integer/activity_main_txtPassword_maxLength"
        android:maxLines="1"
        android:paddingTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPassword"/>


    <Button
        android:id="@+id/btnCancel"
        style="?android:buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnAcept"/>

    <Button
        android:id="@+id/btnAcept"
        style="?android:buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/activity_main_btnAcept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnCancel"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>